# datastorage

./: .gitignore  BlobStore.hs  CryptoStore.hs  HighLevel.hs  IndexTree.hs  LICENSE  List.hs  Makefile  Object.hs  Rolling.hs  RollingVector.hs  SplitStore.hs  Test.hs  TypedBinary.hs  bench.hs  datastorage.cabal  default.nix  hashsplit.hs  mkinput.sh  rollinghash.cpp  testchange.java
src/: BlobStore.hs  RollingVector.hs  TypedBinary.hs
unorganized/: CryptoStore.hs  HighLevel.hs  Rolling.hs  SplitStore.hs  TypedBinary.hs
